# schwarz-lib

./: .gitignore  BENCHMARKING.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  TESTING.md  _config.yml  index.html  run_batch  run_bench  run_script  schwarz.org  single_run
benchmarking/: BENCHMARKING.md  CMakeLists.txt  bench_base.hpp  bench_oras.cpp  bench_ras.cpp  dealii_ex_17.cpp  dealii_ex_6.cpp  dealii_ex_9.cpp  poisson-ras.cpp
doc/: CMakeLists.txt  DoxygenLayout.xml  helpers.cmake
doc/HEAD/: annotated.html  benchmarking_schwarz.html  classBadDimension-members.html  classBadDimension.html  classCudaError-members.html  classCudaError.html  classCusparseError-members.html  classCusparseError.html  classError-members.html  classError.html  classMetisError-members.html  classMetisError.html  classModuleNotImplemented-members.html  classModuleNotImplemented.html  classNotImplemented-members.html  classNotImplemented.html  classNotImplemented__coll__graph.map  classSchwarzWrappers_1_1Communicate-members.html  classSchwarzWrappers_1_1Communicate.html  classSchwarzWrappers_1_1Communicate__coll__graph.map  classSchwarzWrappers_1_1Communicate__coll__graph.md5  classSchwarzWrappers_1_1Initialize-members.html  classSchwarzWrappers_1_1Initialize.html  classSchwarzWrappers_1_1SchwarzBase-members.html  classSchwarzWrappers_1_1SchwarzBase.html  classSchwarzWrappers_1_1Solve-members.html  classSchwarzWrappers_1_1Solve.html  classSchwarzWrappers_1_1Solve__coll__graph.map  classSchwarzWrappers_1_1SolverRAS-members.html  classSchwarzWrappers_1_1SolverRAS.html  classSchwarzWrappers_1_1device__guard-members.html  classSchwarzWrappers_1_1device__guard.html  classUmfpackError-members.html  classUmfpackError.html  classUmfpackError__coll__graph.md5  classes.html  classschwz_1_1Communicate-members.html  classschwz_1_1Communicate.html  classschwz_1_1Initialize-members.html  classschwz_1_1Initialize.html  (+109 more)
doc/bug-fix-1/: annotated.html  benchmarking_schwarz.html  classBadDimension-members.html  classBadDimension.html  classCudaError-members.html  classCudaError.html  classCudaError__coll__graph.map  classCusparseError-members.html  classCusparseError.html  classError-members.html  classError.html  classMetisError-members.html  classMetisError.html  classMetisError__coll__graph.md5  classModuleNotImplemented-members.html  classModuleNotImplemented.html  classNotImplemented-members.html  classNotImplemented.html  classUmfpackError-members.html  classUmfpackError.html  classes.html  classschwz_1_1Communicate-members.html  classschwz_1_1Communicate.html  classschwz_1_1Initialize-members.html  classschwz_1_1Initialize.html  classschwz_1_1Initialize__coll__graph.md5  classschwz_1_1SchwarzBase-members.html  classschwz_1_1SchwarzBase.html  classschwz_1_1Solve-members.html  classschwz_1_1Solve.html  classschwz_1_1SolverRAS-members.html  classschwz_1_1SolverRAS.html  classschwz_1_1device__guard-members.html  classschwz_1_1device__guard.html  comm__helpers_8hpp_source.html  config_8hpp_source.html  conv__tools_8hpp_source.html  cusparse__helpers_8hpp_source.html  device__guard_8hpp_source.html  dir_04d756dcf632278d7d4ae776e659e542.html  (+65 more)
doc/conf/: Doxyfile.in
doc/dealii-ex/: annotated.html  benchmarking_schwarz.html  classBadDimension-members.html  classBadDimension.html  classCudaError-members.html  classCudaError.html  classCusparseError-members.html  classCusparseError.html  classError-members.html  classError.html  classMetisError-members.html  classMetisError.html  classModuleNotImplemented-members.html  classModuleNotImplemented.html  classNotImplemented-members.html  classNotImplemented.html  classUmfpackError-members.html  classUmfpackError.html  classes.html  classschwz_1_1Communicate-members.html  classschwz_1_1Communicate.html  classschwz_1_1Initialize-members.html  classschwz_1_1Initialize.html  classschwz_1_1Initialize__coll__graph.map  classschwz_1_1SchwarzBase-members.html  classschwz_1_1SchwarzBase.html  classschwz_1_1SchwarzBase__coll__graph.map  classschwz_1_1Solve-members.html  classschwz_1_1Solve.html  classschwz_1_1SolverRAS-members.html  classschwz_1_1SolverRAS.html  classschwz_1_1device__guard-members.html  classschwz_1_1device__guard.html  comm__helpers_8hpp_source.html  config_8hpp_source.html  conv__tools_8hpp_source.html  cusparse__helpers_8hpp_source.html  device__guard_8hpp_source.html  dir_04d756dcf632278d7d4ae776e659e542.html  dir_3e1a8270fa985bb6cc570f19f4eb97d9.html  (+64 more)
doc/develop/: annotated.html  benchmarking_schwarz.html  classBadDimension-members.html  classBadDimension.html  classCudaError-members.html  classCudaError.html  classCusparseError-members.html  classCusparseError.html  classError-members.html  classError.html  classMetisError-members.html  classMetisError.html  classModuleNotImplemented-members.html  classModuleNotImplemented.html  classNotImplemented-members.html  classNotImplemented.html  classSchwarzWrappers_1_1Communicate-members.html  classSchwarzWrappers_1_1Communicate.html  classSchwarzWrappers_1_1Initialize-members.html  classSchwarzWrappers_1_1Initialize.html  classSchwarzWrappers_1_1SchwarzBase-members.html  classSchwarzWrappers_1_1SchwarzBase.html  classSchwarzWrappers_1_1Solve-members.html  classSchwarzWrappers_1_1Solve.html  classSchwarzWrappers_1_1SolverRAS-members.html  classSchwarzWrappers_1_1SolverRAS.html  classSchwarzWrappers_1_1SolverRAS__coll__graph.map  classSchwarzWrappers_1_1device__guard-members.html  classSchwarzWrappers_1_1device__guard.html  classUmfpackError-members.html  classUmfpackError.html  classes.html  classschwz_1_1Communicate-members.html  classschwz_1_1Communicate.html  classschwz_1_1Communicate__coll__graph.md5  classschwz_1_1Initialize-members.html  classschwz_1_1Initialize.html  classschwz_1_1Initialize__coll__graph.md5  classschwz_1_1SchwarzBase-members.html  classschwz_1_1SchwarzBase.html  (+127 more)
doc/doc-setup/: benchmarking_schwarz.html  classBadDimension.html  classCudaError-members.html  classCudaError.html  classCusparseError.html  classCusparseError__coll__graph.map  classError.html  classMetisError-members.html  (+63 more)
(+2136 files in other folders)
